[package]
name = "took"
version = "0.1.0"
authors = ["jiazifa <2332532718@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "took-models",
    "took-types",
    "took-service",
    "took-actix",
]

[features]
actix = ["took-actix"]

[dependencies]

config = "0.9"

chrono = { version = "0.4", features = ["serde"] }

fast_log = "1.3"

[dependencies.clap]
version = "~2.33"
features = ["yaml"]

[dependencies.took-actix]
version = "0.1"
path = "took-actix"
optional = true